pulls animations into media queries. updates readme. found fix for spacing on mobileclone nurse. starts work with styling index.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,10 +43,6 @@ p {
   margin: 0;
 }
 
-/* .app-header {
-  font-family: Roboto, sans-serif;
-} */
-
 a:link,
 a:hover,
 a:visited {
@@ -60,23 +56,24 @@ img {
   background-color: var(--clr-logo);
 }
 
-/* .container {
-  margin-bottom: 50px;
-} */
-
 .content {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: baseline;
   justify-content: space-evenly;
-  margin-top: 450px;
+  margin-top: 50px;
 }
 
 .content .project {
   position: relative;
   width: 8.5em;
   /* em*16=pixels */
-  flex: 1;
-  margin: 23px;
+  margin: 25px;
+}
+
+.content .project:only-child {
+  padding: 5px;
 }
 
 .content .front {
@@ -141,21 +138,6 @@ img {
     opacity: 1;
   }
 }
-.content .project:hover .front {
-  transform: translateY(-30%) scale(0.9);
-}
-.content .project:hover .front .name {
-  animation: projectName 250ms forwards;
-}
-.content .project:hover .background {
-  opacity: 1;
-  transition: transform 250ms cubic-bezier(0.21, 1, 0.81, 1.01),
-    opacity 100ms linear;
-  transform: scale(1.4, 1.2);
-}
-.content .project:hover .back {
-  opacity: 1;
-}
 
 #splash {
   position: absolute;
@@ -180,15 +162,39 @@ img {
   opacity: 0;
   z-index: -1;
 }
-
-@media (mid-width: 768px) {
-  app-header {
-    width: 100%;
-    background-color: yellow;
+/* Desktop / Nonmobile */
+@media (min-width: 1200px) {
+  .content {
+    margin-top: 200px;
   }
+
+  .content .project:hover .front {
+    transform: translateY(-30%) scale(0.9);
+  }
+  .content .project:hover .front .name {
+    animation: projectName 250ms forwards;
+  }
+  .content .project:hover .background {
+    opacity: 1;
+    transition: transform 250ms cubic-bezier(0.21, 1, 0.81, 1.01),
+      opacity 100ms linear;
+    transform: scale(1.4, 1.2);
+  }
+  .content .project:hover .back {
+    opacity: 1;
+  }
+}
+/* Mobile */
+@media only screen and (min-device-width: 360px) and (max-device-width: 812px) {
+  .content {
+    margin-top: 400px;
+  }
+
+  .content .project {
+    margin-top: 10px;
+  }
+
   .container {
     background-color: yellow;
   }
 }
-
-/*# sourceMappingURL=maintest.css.map */
